--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello, Rosa</h1>
-    <script scr="index.js"></script>
+    <h1>To-Do App</h1>
+    <form id="ourForm" action="submit">
+        <input id="ourField" type="text" >
+        <button>Create item</button>
+    </form>
+    <h3>Need to do</h3>
+    <ul id="ourList">
+    </ul>
+    <script src="document.js"></script>
 </body>
 </html>
