--- a/index.html
+++ b/index.html
@@ -5,16 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="mosh.js"></script>
 </head>
 <body>
-    <h1>To-Do App</h1>
-    <form id="ourForm" action="submit">
-        <input id="ourField" type="text" >
-        <button>Create item</button>
-    </form>
-    <h3>Need to do</h3>
-    <ul id="ourList">
-    </ul>
-    <script src="document.js"></script>
+    
 </body>
 </html>
